--- a/css/main.css
+++ b/css/main.css
@@ -338,10 +338,15 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   max-width: 100%;
   max-height: 100%;
 }
-.logo img {
+.logo-container1{
+  width: 55%;
+}
+.image1{
+  z-index: 9999999999999999;
+  width: 180px;
   display: none;
   max-width: 100%;
-  max-height: 100%
+  max-height: 100%;
 }
 
 
